# dd-cslp

./: .gitignore  README.md  docker-compose.yml
api-gateway/backend/: Dockerfile  pyproject.toml  start.sh
api-gateway/backend/app/: main.py
api-gateway/backend/app/routes/: __init__.py  blog.py  ctf.py  task_tracker.py  user.py
frontend/: Dockerfile  (+4 more)
services/dd-blog/backend/: Dockerfile  pyproject.toml  start.sh
services/dd-blog/backend/alembic/: env.py
services/dd-blog/backend/alembic/versions/: 2024_06_06_1143-088d6035ade9_init.py
services/dd-blog/backend/app/: config.py  main.py
services/dd-blog/backend/app/crud/: __init__.py  category.py  comment.py  like.py  media.py  page.py  post.py  tag.py
services/dd-blog/backend/app/models/: __init__.py  category.py  comment.py  like.py  media.py  page.py  post.py  post_tags.py  tag.py
services/dd-blog/backend/app/schemas/: __init__.py  category.py  comment.py  like.py  media.py  page.py  post.py  tag.py
services/dd-user/backend/: Dockerfile  Dockerfile.migrations  database.md  database.plantuml  pyproject.toml
services/dd-user/backend/alembic/: env.py
services/dd-user/backend/alembic/versions/: 2024_06_03_0646-ab46c8f923b8_init_database.py  2024_06_03_0649-7bfd64643320_update_user_table.py
services/dd-user/backend/app/: config.py  main.py
services/dd-user/backend/app/crud/: __init__.py  association.py  blocked_ip.py  login_attempt.py  password_change.py  permission.py  role.py  user.py  user_access_log.py  user_security.py  user_session.py  user_settings.py
services/dd-user/backend/app/db/: db_helper.py
services/dd-user/backend/certs/: jwt-private.pem  jwt-public.pem
(+245 files in other folders)
