[tool.poetry]
name = "api-gateway"
version = "0.1.0"
description = "api gateway for dd-cslp microservices"
authors = ["dobrodelete"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pydantic = "^2.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
