[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["dobrodelete"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
datetime = "^5.5"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
pydantic = "^2.7.2"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
