[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["dobrodelete"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
datetime = "^5.5"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
pydantic = "^2.7.1"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
email-validator = "^2.1.1"
pydantic-settings = "^2.2.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
python-jose = "^3.3.0"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
